--- a/content/stylesheets/styles.sass
+++ b/content/stylesheets/styles.sass
@@ -1,5 +1,5 @@
 @import compass/utilities
-@import grid-coordinates/grid
+@import grid-coordinates
 
 body
   font-family: Arial, Verdana, Helvetica, Times, "Times New Roman", sans-serif
